ajout du fichier Procfile et config pour heroku

--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "sercovid-master",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cassandra-driver": "^4.5.0",
-    "cookie-parser": "~1.4.4",
-    "csvjson": "^5.1.0",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-ejs-extend": "0.0.1",
-    "geolib": "^3.2.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
-    "socket.io": "^2.3.0"
-  }
+    "name": "sercovid-master",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "dev": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cassandra-driver": "^4.5.0",
+        "cookie-parser": "~1.4.4",
+        "csvjson": "^5.1.0",
+        "debug": "~2.6.9",
+        "ejs": "~2.6.1",
+        "express": "~4.16.1",
+        "express-ejs-extend": "0.0.1",
+        "geolib": "^3.2.1",
+        "http-errors": "~1.6.3",
+        "morgan": "~1.9.1",
+        "mysql": "^2.18.1",
+        "socket.io": "^2.3.0"
+    },
+    "engines": {
+        "node": "10.x"
+    }
 }
